# mirl_core

./: Cargo.toml  README.md
src/: dependencies.rs  lib.rs  macros.rs  math.rs  misc.rs  prelude.rs
src/constants/: bytes.rs  mod.rs  time.rs
src/directions/: all.rs  cardinal.rs  direction.rs  directions_with_none.rs  extended.rs  misc.rs  mod.rs  special.rs
src/graphics/: colors.rs  imagery.rs  mod.rs
src/platform/: keyboard_manager.rs  keycodes.rs  mod.rs  mouse.rs  mouse_manager.rs
src/platform/file_system/: file_data.rs  file_system_traits.rs  get_os_font.rs  mod.rs  native.rs
src/platform/mouse/: mod.rs
src/render/: buffer_compatibility.rs  formats.rs  mod.rs  traits.rs
src/render/buffer/: get_pixel.rs  mod.rs  new.rs
src/render/const_buffer/: mod.rs  new.rs  set_pixel.rs
src/text/: mod.rs  position.rs
