[package]
name = "mirl_core"
version = "0.0.0-alpha"
edition.workspace = true
repository.workspace = true


[dependencies]
mirl_derive = { version = "0.0.0-alpha", optional = true }

# For random numbers
rand = { version = ">=0.9.2", optional = true, default-features = false, features = [
    "thread_rng",
] }
# Codec
compactly = { version = "0.1.6", optional = true }
serde = { version = ">=1.0", optional = true, default-features = false }
bitcode = { version = "0.6.9", optional = true, default-features = false, features = [
    "derive",
] }
wincode = { version = "0.5.3", optional = true, features = ["derive"] }
zerocopy = { version = "0.8.48", optional = true, default-features = false, features = [
    "float-nightly",
    "derive",
] }

# Enum functionality
strum = { version = ">=0.28", optional = true, default-features = false, features = [
    "derive",
] }
enum_ext = { version = "0.6.0", optional = true, default-features = false }


# graphics & render
image = { version = ">=0.25.9", optional = true, default-features = false }

# Font lib
fontdue = { version = ">=0.9.3", optional = true, default-features = false }

# Extra support for mirl_windowing cursor loading
sevenz-rust2 = { version = "0.21.0", default-features = false, optional = true }

[features]
all = [
    "std",
    "all_codecs",
    "all_enum_extensions",
    "image",
    "font_support",
]
default = ["std"]
std = []
# Does nothing by itself. Needs another codec or enum flag to do something
mirl_derive = ["dep:mirl_derive"]
# Compatibility with ffi
c_compatible = ["mirl_derive"]
# Enables all codecs
all_codecs = ["serde", "bitcode", "wincode", "compactly", "zerocopy"]
# All enum extensions
all_enum_extensions = ["strum", "enum_ext"]

# Codec stuff
serde = ["serde/derive", "serde/std", "std", "mirl_derive"]
bitcode = ["dep:bitcode", "mirl_derive"]
wincode = ["dep:wincode", "mirl_derive"]
compactly = ["dep:compactly", "mirl_derive"]
zerocopy = ["dep:zerocopy", "mirl_derive"]

# Enum extensions
strum = ["dep:strum", "mirl_derive"]
enum_ext = ["dep:enum_ext", "mirl_derive"]

# Image lib support (Previously Imagery)
image = ["dep:image"]

# Random numbers
random = ["dep:rand", "std"]
# Font/fontdue support
font_support = [
    "dep:fontdue",
    # "dep:once_cell",
    # "dep:font-kit",
    # "std",
    # "dep:parking_lot",
]
_checking = ["all"]

mirl_windowing_support = ["dep:sevenz-rust2"]

# TODO
# Font libs to support:
# - ab_glyph
# - rusttype
# - font-kit
# - font-rs
# - bmfont
[lints]
workspace = true
[build-dependencies]
mirl_build_tools = { workspace = true }
