[package]
name = "mirl_core"
version = "0.0.0-alpha"
edition.workspace = true
repository.workspace = true

[features]
all = ["std", "all_codecs", "all_enum_extensions", "image", "font_support"]
default = ["std"]
std = []
# Does nothing by itself. Needs another codec or enum flag to do something
mirl_derive = ["dep:mirl_derive"]
# Compatibility with ffi
c_compatible = ["mirl_derive"]
# Enables all codecs
all_codecs = ["serde", "bitcode", "wincode", "compactly", "zerocopy"]
# All enum extensions
all_enum_extensions = ["strum", "enum_ext"]

# Codec stuff
serde = ["serde/derive", "serde/std", "std", "mirl_derive"]
bitcode = ["dep:bitcode", "mirl_derive"]
wincode = ["dep:wincode", "mirl_derive"]
compactly = ["dep:compactly", "mirl_derive"]
zerocopy = ["dep:zerocopy", "mirl_derive"]

# Enum extensions
strum = ["dep:strum", "mirl_derive"]
enum_ext = ["dep:enum_ext", "mirl_derive"]

# Image lib support (Previously Imagery)
image = ["dep:image"]

# Random numbers
random = ["dep:rand", "std"]
# Font/fontdue support
font_support = [
    # "dep:once_cell",
    # "dep:font-kit",
    # "std",
    # "dep:parking_lot",
    "dep:fontdue",
]
_checking = ["all"]

[dependencies]
bitcode = { version = "0.6", optional = true, default-features = false, features = [
    "derive",
] }
# Codec
compactly = { version = "0.1", optional = true }
enum_ext = { version = "0.6", optional = true, default-features = false }

# Font lib
fontdue = { version = "0.9", optional = true, default-features = false }

# graphics & render
image = { version = "0.25", optional = true, default-features = false }
mirl_derive = { version = "0.0.0-alpha", optional = true }

# For random numbers
rand = { version = "0.10", optional = true, default-features = false, features = [
    "thread_rng",
] }
serde = { version = "1", optional = true, default-features = false }

# Enum functionality
strum = { version = "0.28", optional = true, default-features = false, features = [
    "derive",
] }
wincode = { version = "0.5", optional = true, features = ["derive"] }
zerocopy = { version = "0.8", optional = true, default-features = false, features = [
    "float-nightly",
    "derive",
] }
[build-dependencies]
mirl_build_tools = { workspace = true }

# TODO
# Font libs to support:
# - ab_glyph
# - rusttype
# - font-kit
# - font-rs
# - bmfont
[lints]
workspace = true
